--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
     <h1>
-      Some content
+<img src="https://avatars.githubusercontent.com/u/16405175?v=4">
+
     </h1>
     
     Hello there, awesome person! 
